@@ -20,7 +20,7 @@ sed -r 's/([a-z]+)\t\w+\t([a-z]+)\t.*$/{"\1"\,"\2"}\,/' \
 
 
 cat >> table.h << EOF
- { 0,0}, 
+ { "","" },
 };
 
 EOF
